version/3.0/ripscrip/4.3-buttons.md
# 4.3 Buttons

[◀ Prev: 4.2 Mouse Fields & Pointer](4.2-mouse-fields-and-pointer.md) · [Contents](README.md) · [Next: 4.4 Tone & Sound Generation ▶](4.4-tone-and-sound-generation.md)

_Reconstructed edition - every claim carries an evidence tag; see [Contents](README.md) for the legend._

[Buttons](../../GLOSSARY.md) - styled interactive controls with plain, icon (BMP), or clipboard faces, optional [hot-icon](../../GLOSSARY.md) pressed states (`.BMH`), special effects (bevel, chisel, recess, sunken), labels, hotkeys, and radio/check-box grouping. A style is defined once ([RIP_BUTTON_STYLE](#rip_button_style)) and then instantiated by [RIP_BUTTON](#rip_button) commands; up to 36 styles live in the button style [data table](7.1-data-tables.md#button-style-table) and are switched with [RIP_SWITCH_BUTTON_STYLE](#rip_switch_button_style).

Reference tables: [Label Orientation](#label-orientation) · [Button Types](#button-types) · [Size & Color Parameters](#size-and-color-parameters) · [Flags Field 1](#flags-field-1) · [Font Metrics & Descenders](#font-metrics-and-descenders) · [Chisel Effect Insets](#chisel-effect-insets) · [Flags Field 2](#flags-field-2)

_The 1.54 record is [4.2 in the v1.54 reference](../../1.54/ripscrip/4.2-buttons.md); the 2.0 record is [4.3 in the v2.0 reference](../../2.0/ripscrip/4.3-buttons.md), whose changes were `.BMP`/`.BMH` faces, world-coordinate placement, the `<other_port>` clipboard-port parameter, and style slots._

_Evidence: 2.00a4; HLP; corpus._

## RIP_BUTTON_STYLE

_Button style definition_

|  |  |
| --- | --- |
| **Level** | 1 |
| **Command** | `B` |
| **Arguments** | `wid:XY hgt:XY orient:2 flags:4 size:2 dfore:2 dback:2 bright:2 dark:2 surface:2 grp_no:2 flags2:2 uline_col:2 corner_col:2 other_port:1 res:5` |

**Format:** `!|1B <wid> <hgt> <orient> <flags> <bevsize> <dfore> <dback> <bright> <dark> <surface> <grp_no> <flags2> <uline_col> <corner_col> <other_port> <res>` **Example:** `!|1B0000020PVS080F000F080700000F07000000`

**Attributes used:** Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/4.3-buttons.md#rip_button_style)) · HLP (`RIP_ButtonStyle`; limits - label ≤255 chars, hotkey ≤255, groups 0-35, types "plain, icon or snapshot") · corpus (47 uses in 18 files) · SyncTERM (ripper.c:15015)

This RIPscrip command is probably one of the most complex in the entire protocol. It defines how subsequent [RIP_BUTTON](#rip_button) commands will be interpreted. The purpose of this command is to define what a Button is and how they operate. Buttons can have many different configurations, flags, and styles. With the diversity of modes that the Button can take on, complexity is a necessary evil.

There are 36 separate button style slots that can be defined simultaneously. This command allows you to alter the current button style slot. This button style slot is used by the RIP*BUTTON command to define buttons of particular types. Button style slots can be used to avoid retransmitting button styles over and over again. *(v2.A4)\_

This command does not actually do anything visibly on the screen. Simply put, this creates an internal definition for the Button mode which will be used with RIP_BUTTON commands after the definition is created.

TeleGrafix left the positional crib for its 36-character argument block as a comment in the corpus's SHOWFONT.FN:

```text
!|! wwhhooffffssffbbBBddssgg22uuccprrrrr
```

HLP's "snapshot" button type corresponds to the 2.00a4 clipboard button. _Evidence: corpus (SHOWFONT.FN); HLP._

### Label Orientation

Every Button can have an optional text label. It can appear in several different locations compared to the Button itself. This is specified in the `<orient>` parameter. The actual text of the label is not specified with this command, it is specified when you actually create a Button (see RIP_BUTTON below). The value that `<orient>` can be is as follows:

| Value | Description of Orientation                |
| ----- | ----------------------------------------- |
| 00    | Display label above button                |
| 01    | Display label to the left of button       |
| 02    | Display label in the center of the button |
| 03    | Display label to the right of button      |
| 04    | Display label beneath the button          |

### Button Types

There are three basic "types" of Buttons. There are Icon buttons, Clipboard buttons and Plain buttons. Each of these differ in the way that they create the button's image. A description of each type is as follows: _(v1.54)_

**ICON BUTTON (flag 128)** - An Icon Button means that the actual image of the button will be created by loading a bitmap icon image from the disk and load it at the given locatino. Any special effects (see below) can be applied to the Icon to further enhance the image. The filename for the Icon is supplied with the RIP*BUTTON command, as is the Icon's upper left X/Y coordinate. Icon Buttons are always stamped in COPY mode. *(v1.54)\_

**CLIPBOARD BUTTON (flag 1)** - A clipboard button uses the clipboard port contents for the base image of the button. If no `<other_port>` is defined (ie, port #0), then the specific port that is used for the source image is determined by the clipboard pointer. If the clipboard pointer isn't defined, then the RIP*BUTTON commandsd that follow are ignored. If the `<other_port>` is from 1-35, then this specifies a previously defined port. This port will be the source of the bitmap image of the button. The entire contents of the port's viewport will be the image used for any subsequent RIP_BUTTON commands. If the given port doesn't exist, then it the RIP_BUTTON command(s) are ignored. Any special effects can be applied to this image to further enhance the overall button's image. *(v2.A3)\_

**PLAIN BUTTON (flag 256)** - A plain button is exactly that, plain. No special graphics are used to create the button. The entire button region is simply filled-in with a solid colored rectangle using the `<surface>` color. Any special effects can be further applied to enhance the button's appearance. _(v1.54)_

### Size and Color Parameters

The `<hgt>` and `<wid>` parameters represent the fixed height and width of the Button (applies only to Plain Buttons). If both values are greater than zero, then this will represent the actual size of the Button (its dimensions are not specified by the RIP_BUTTON command). If both of these are set to zero, then the actual RIP_BUTTON command will specify the size of the particular Button (dynamic sizing).

The `<bevsize>` parameter is only used if the BEVEL FLAG (flag 512) is specified. When active, this parameter will determine how many pixels thick the bevel should be. This may be any value greater or equal to zero. _(v1.54)_

There are a large number of flag values that can be combined to achieve a great many effects. There are two flag parameters for the RIP_BUTTON_STYLE command, `<flags>` and `<flags2>`. They are detailed in the two tables that follow in this Section. You may combine any of the flags in the first table together simply by adding the "Value" of each one together and representing that number as a MegaNum.

The `<dfore>` and `<dback>` parameters are used with the text label. The `<dfore>` parameter is the foreground color for the text. It is always used to determine the color of the text label. The `<dback>` color is the color of the dropshadow (if any). This parameter is only used when you have specified the "Dropshadow" flag in the `<flags>` parameter (see below).

NOTE: There are seven (7) color parameters in this command. These parameters are ALWAYS used in Color Map mode. Direct RGB Color Mode cannot be used for these parameters. With Color Map mode, you have up to 256 separate color combinations possible for each color, providing you with a great deal of flexibility. The color parameters always use the Base Math set by the global Base Math setting. _(v2.A0)_

The `<bright>`, `<dark>` and `<surface>` parameters are used with Plain Buttons and with the Special Effects styles (see `<flags>` below). These colors represent the highlighted color, the shadowed color, and the regular surface color that is used in Special Effects. Typical color combinations for these colors might be White, Dark-Gray and Light-Gray respectively for a "chiseled steel" appearance. Each of these values can contain a two-digit value representing any valid color code that may be used in the [RIP_COLOR](2.0-color-modes-and-palettes.md#rip_color) command.

In addition to the special effects colors, are two additional colors that can be used, `<uline_color>` which is used for the color of the underline (in the text label), and `<corner_color>` which is used to display the colors of corners for things like the Bevel, Recess, etc.

The `<grp_no>` parameter determines which Button Group subsequent RIP_BUTTON commands will be associated with. Button Groups are used to maintain groups of Buttons for things like Radio Buttons and/or Checkbox Buttons. See the section on the BUTTON COMMAND for more information on these modes, and what Button Groups can offer. This value can range anywhere from 0-Z (i.e., 0-35). You should not mix Checkbox and Radio buttons in the same group. -- unpredictable things may happen if you do.

### Flags Field 1

Some `<flags>` are mutually exclusive. For example, you can only have one of the "Plain", "Icon", or "Clipboard" flags chosen at once. To better assist you in determining which values can be combined with each other, the right-most five columns in the next two tables explain if the specific flag can be used under a specific condition. For example, you cannot choose the "Hot Icon" flag if you are dealing with a Clipboard Button. Another example is that you cannot underline the hotkey character in the label if it is not a Mouse Button.

The following table contains the possible flag values for the `<flags>` parameter. Each of these values may be combined to achieve a "composite" group of flags. See the preceding paragraphs for a more detailed explanation of this method.

| Value | Description of Flags Field #1 | Icn | Clp | Pln | Mse | NoMse |
| --- | --- | --- | --- | --- | --- | --- |
| 1 | Button is a "Clipboard Button" | N | Y | N | Y | Y |
| 2 | Button is "Invertable" | Y | Y | Y | Y | N |
| 4 | Reset screen after button click | Y | Y | Y | Y | N |
| 8 | Display Chisel special effect | Y | Y | Y | Y | Y |
| 16 | Display Recessed special effect | Y | Y | Y | Y | Y |
| 32 | Dropshadow the label (if any) | Y | Y | Y | Y | Y |
| 64 | Auto-stamp image into Clipboard slot _(v2.A2)_ | Y | Y | Y | Y | Y |
| 128 | Button is an "Icon Button" | Y | N | N | Y | Y |
| 256 | Button is a "Plain Button" | N | N | Y | Y | Y |
| 512 | Display Bevel special effect | Y | Y | Y | Y | Y |
| 1024 | Button is a Mouse Button | Y | Y | Y | Y | N |
| 2048 | Underline hot-key in label | Y | Y | Y | Y | N |
| 4096 | Make Icon Button use Hot Icons | Y | N | N | Y | N |
| 8192 | Adj. vertical centering of label | Y | Y | Y | Y | Y |
| 16384 | Button belongs to a Radio Group | Y | Y | Y | Y | N |
| 32768 | Display Sunken special effect | Y | Y | Y | Y | Y |

The Icon Button, Clipboard button and Plain flags have already been discussed. Following, will be more discussion of the various flags used in the preceding table: _(v1.54)_

**BUTTON IS INVERTABLE (flag 2)** - This means that the button will be inverted when clicked. This flag is only useful when combined with the "Button is a Mouse Button - flag 1024) flag. Even if the button has special effects, those will be inverted as well as they are considered part of the button - all except for the Recessed effect. The recessed effect is NEVER considered part of the actual button image, and will never be part of the mouse field, button's image or anything - it is just extra graphics. _(v1.54)_

**RESET SCREEN AFTER BUTTON CLICK (flag 4)** - This flag is used when the button is considered a Mouse Button (flag 1024). What this means is that when the user clicks on the button, the screen will be reset exactly the same as a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command will do. The reset is performed before the host command is processed (if any). _(v1.54)_

**DISPLAY CHISEL SPECIAL EFFECT (flag 8)** - This displays a special effect on-top of the button image that gives the visual impression of an indented gutter just to the inside of the button's border. The amount of indentation varies depending on the size of the button. See below for a table of indentation values for the Chisel effect. _(v1.54)_

**DISPLAY RECESSED SPECIAL EFFECT (flag 16)** - This places a recessed one-pixel bevel around the exterior of the button. It is never considered part of the button's image. Its purpose is to give the button a more 3D look by making it appear that the button is "poking through" a hole in a dialog box. This effect is accomplished by placing a black outline (one pixel wide) around the exterior of the button's image (including bevel, etc), then placing a one-pixel wide inverted bevel around the black outline. _(v1.54)_

**DROPSHADOW THE LABEL IF ANY (flag 32)** - This flag will instruct RIPscrip to place a dropshadowed version of the text label one pixel to the right and one pixel lower than the original label. This is accomplished by drawing the label first in the `<dback>` color, then drawing the label offset up-left in the `<dfore>`. _(v1.54)_

**AUTO-STAMP IMAGE INTO CLIPBOARD SLOT (flag 64)** - This option is also known as "Auto-Clip". What this means is right after the first button's image is rendered (including any special effects), it is automatically copied into another port specified by the `<other_port>` parameter. If that port is defined as port #0, then this mode is treated like a [RIP_GET_IMAGE](4.0-icons-and-bitmaps.md#rip_get_image) command, copying the image onto some clipboard port, by determining the clipboard pointer and establishing an offscreen bitmap port located at the first unused port number. If the `<other_port>` parameter is set to a value from 1-35, then a specific port number is used; that port is deleted (if it's in use) then re-defined. If the `<other_port>` parameter specifies the same port as the currently active drawing port, or if the clipboard pointer points to the current drawing port, then auto-clip mode is ignored. The Recessed special effect is not considered part of the button image for this flag and is not made part of the clipboard image. After the image is copied into a clipboard port, the label is drawn (this is so that the label is not placed into a clipboard port), then a number of flags in the current Button Style definition are altered. Specifically, the Icon and Plain flags are disabled, and Clipboard button enabled (thus making any subsequent buttons use the resultant Clipboard button image for their button's representation). In addition, the chisel, bevel, auto-clip and sunken flags are disabled. The final result is a Clipboard button with no special effects other than the Recessed effect (if any). This is most often used with Icon Buttons where every subsequent button uses the same Icon over and over again - the net result of this is less "disk usage" whenever a button is created; in addition, buttons will draw faster too. If this option is used, then the parameter `<other_port>` is used to determine which clipboard port to use for the stored image. _(v2.A3)_

**BUTTON IS AN ICON BUTTON (flag 128)** - See previous discussions on button types above. _(v1.54)_

**BUTTON IS A PLAIN BUTTON (flag 256)** - See previous discussions on button types above. _(v1.54)_

**DISPLAY BEVEL SPECIAL EFFECT (flag 512)** - When this flag is active, a bevel will be drawn `<size>` pixels thick on the outside of the base image of the button. This makes the button that many pixels wider and taller in each direction. See the RIP*BUTTON for a more detailed description of the affects of the button's final size. *(v1.54)\_

**BUTTON IS A MOUSE BUTTON (flag 1024)** - When this flag is enabled, the button becomes a clickable mouse region. When this option is in use, the Invert flag and several others are available (see the preceding chart). When a button is a non-mouse button, then it is only used to draw a dialog box or an elaborate "static graphic" image of something that "looks" like a button. _(v1.54)_

**UNDERLINE HOT-KEYS IN LABEL (flag 2048)** - When this flag is active, the first occurence of the hot-key character in the button's label will be underlined using the `<uline_col>` color. Special care must be taken when underlining the character, taking into consideration if the character has a segment that goes below the "baseline" of the font. Consult the following section to determine what ASCII characters have these "descenders". Characters with descenders have the underline drawn slightly lower than for characters without them. _(v1.54)_

**MAKE ICON BUTTON USE HOT ICONS (flag 4096)** - A Hot Icon is a button that has an alternative image when the button is "depressed". Normally, when a button is an Icon button, some form of Icon File is used to create the image of the button (eg, EMAIL.BMP). When the Hot Icon flag is in use, whenever that button is depressed, rather than using the normal Icon File for the button's image, a different Icon File is used for the button's image. The filename would be the same filename as the original Icon, but with an extension of .BMH instead of .BMP. When Hot Icon is in use, the alternative Icon is stamped in COPY mode. If the file does not exist, then the original Icon's image is used, but pasted in NOT mode for the duration of the depression. _(v1.54)_

**ADJ. VERTICAL CENTERING OF LABEL (flag 8192)** - Some Labels may appear non-centered vertically when drawn using some fonts that are rather large. With this in mind, you have the option to adjust the vertical centering. What this does is take into consideration the height of any descenders of the label and calculate those into the overall height of the label before centering. If this flag is not used, then the descenders are not taken into consideration when the vertical centering is calculated. See the Font Metric tables below for more detailed information on font sizes and their associated metrics. This command has no effect if the Label orientation is LEFT or RIGHT of the button. It only applies to an orientation of TOP, BOTTOM or CENTER. _(v1.54)_

**BUTTON BELONGS TO A RADIO GROUP (flag 16384)** - When this flag is used, then any buttons defined in this button `<group_no>` are considered to be radio buttons where only one of the buttons can be clicked (selected) at any particular time. If a button is not a radio button or a checkbox button, then the "selected" flag of the RIP*BUTTON command is ignored. When a Radio Button is clicked, any other radio button in that button group that is selected is automatically de-selected and the current one selected. Any host command is processed at the time of the button click. If a Radio Button is drawn initally as selected, then that host command is processed at the time of its initial drawing. See [5.2 Templates & Conditionals](5.2-templates-and-conditionals.md) for a more complete description of Radio Buttons and how they interact with their Button Group and with each other. *(v1.54)\_

**DISPLAY SUNKEN SPECIAL EFFECT (flag 32768)** - When this option is enabled, a one-pixel inverted bevel is drawn exactly one pixel to the inside of the base image of the button. This and the chisel effect are the only two special effects which physically "overwrite" portions of the base button image. _(v1.54)_

### Font Metrics and Descenders

This array defines which characters have descenders (portions of their font that go below the baseline). This information is used in the vertical centering of button text labels. _Evidence: 2.00a4._

```c
char low_char[256] =
{
    0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
    0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
    0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
    0,0,0,0,0,0,0,1,0,0,1,0,0,0,0,0,1,1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,
    1,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,
    0,0,0,0,0,0,0,0,0,0,0,1,1,0,0,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,
    1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,
    0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0
};
```

NOTE: The low*char[] table is only truly useful under ENG configurations for the text window. Other languages may have descenders for other characters. *(v2.A3)\_

```c
struct METRIC
{
    unsigned int top;    // Scan lines from TOP OF CELL to char top
    unsigned int bow;    // Scan lines from TOC to crest of char
    unsigned int base;   // Scan lines from TOC to baseline
    unsigned int drop;   // Scan lines from TOC to lowermost pixel
};
```

The METRIC structure can be described visually as follows:

```text
      0 ──╔══════════╤══════════╗   Notice that the topmost scanline
          ║          │          ║   of a font cell is not necessarily
     TOP──╫─█────────┼──────────╢   the top of the character.  The
          ║ █        │          ║   "top" field of the structure
          ║ █        │          ║   contains the vertical offset
          ║ █        │          ║   from the top of the cell for all
     BOW──╫─█────────┼──────────╢   fonts in that set.
          ║ █ ███    │   ███ █  ║
          ║ ██   █   │  █   ██  ║
          ║ █     █  │ █     █  ║
          ║ █     █  │ █     █  ║
          ║ █     █  │ █     █  ║
          ║ █     █  │  █   ██  ║
    BASE──╫─█─────█──┼───███─█──╢
          ║          │       █  ║
          ║          │       █  ║
          ║          │       █  ║
          ║          │  █   █   ║
    DROP──╫──────────┼───███────╢
          ║          │          ║
    END ──╚══════════╧══════════╝
```

**Default Font (Font 0)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 0   | 2   | 6    | 7    |
| 2    | 0   | 4   | 13   | 15   |
| 3    | 0   | 6   | 20   | 23   |
| 4    | 0   | 8   | 27   | 31   |
| 5    | 0   | 10  | 34   | 39   |
| 6    | 0   | 12  | 41   | 47   |
| 7    | 0   | 14  | 48   | 55   |
| 8    | 0   | 16  | 55   | 63   |
| 9    | 0   | 18  | 62   | 71   |
| 10   | 0   | 20  | 69   | 79   |

**Triplex Font (Font 1)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 6   | 10  | 18   | 22   |
| 2    | 6   | 11  | 20   | 24   |
| 3    | 8   | 13  | 23   | 28   |
| 4    | 10  | 17  | 31   | 38   |
| 5    | 13  | 23  | 41   | 50   |
| 6    | 16  | 28  | 51   | 62   |
| 7    | 20  | 34  | 62   | 76   |
| 8    | 25  | 42  | 77   | 94   |
| 9    | 30  | 51  | 93   | 114  |
| 10   | 40  | 68  | 124  | 152  |

**Small Font (Font 2)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 2   | 3   | 5    | 6    |
| 2    | 2   | 4   | 6    | 7    |
| 3    | 2   | 3   | 6    | 7    |
| 4    | 3   | 5   | 9    | 11   |
| 5    | 4   | 7   | 12   | 14   |
| 6    | 5   | 9   | 15   | 18   |
| 7    | 6   | 10  | 18   | 22   |
| 8    | 7   | 12  | 22   | 27   |
| 9    | 9   | 15  | 27   | 33   |
| 10   | 12  | 20  | 36   | 44   |

**Sans Serif Font (Font 3)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 7   | 11  | 19   | 23   |
| 2    | 7   | 12  | 21   | 25   |
| 3    | 9   | 14  | 24   | 29   |
| 4    | 11  | 18  | 32   | 39   |
| 5    | 14  | 24  | 42   | 51   |
| 6    | 18  | 30  | 53   | 64   |
| 7    | 22  | 36  | 64   | 78   |
| 8    | 28  | 45  | 80   | 97   |
| 9    | 33  | 54  | 96   | 117  |
| 10   | 44  | 72  | 128  | 156  |

**Gothic Font (Font 4)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 7   | 11  | 19   | 23   |
| 2    | 7   | 12  | 21   | 25   |
| 3    | 9   | 14  | 24   | 29   |
| 4    | 11  | 18  | 32   | 39   |
| 5    | 14  | 24  | 42   | 51   |
| 6    | 18  | 30  | 53   | 64   |
| 7    | 22  | 36  | 64   | 78   |
| 8    | 28  | 45  | 80   | 97   |
| 9    | 33  | 54  | 96   | 117  |
| 10   | 44  | 72  | 128  | 156  |

**Script Font (Font 5)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 10  | 17  | 22   | 29   |
| 2    | 10  | 18  | 24   | 32   |
| 3    | 12  | 21  | 27   | 36   |
| 4    | 16  | 28  | 37   | 49   |
| 5    | 21  | 37  | 49   | 65   |
| 6    | 26  | 46  | 61   | 81   |
| 7    | 32  | 56  | 74   | 98   |
| 8    | 40  | 70  | 92   | 122  |
| 9    | 48  | 84  | 111  | 147  |
| 10   | 64  | 112 | 148  | 196  |

**Simplex Font (Font 6)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 8   | 13  | 21   | 25   |
| 2    | 9   | 14  | 23   | 27   |
| 3    | 10  | 16  | 26   | 31   |
| 4    | 13  | 21  | 35   | 42   |
| 5    | 17  | 28  | 46   | 55   |
| 6    | 22  | 35  | 58   | 69   |
| 7    | 26  | 42  | 70   | 84   |
| 8    | 32  | 52  | 87   | 104  |
| 9    | 39  | 63  | 105  | 126  |
| 10   | 52  | 84  | 140  | 168  |

**Triplex Script Font (Font 7)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 6   | 10  | 18   | 22   |
| 2    | 6   | 11  | 20   | 24   |
| 3    | 8   | 13  | 23   | 28   |
| 4    | 10  | 17  | 31   | 38   |
| 5    | 13  | 23  | 41   | 50   |
| 6    | 16  | 28  | 51   | 62   |
| 7    | 20  | 34  | 62   | 76   |
| 8    | 25  | 42  | 77   | 94   |
| 9    | 30  | 51  | 93   | 114  |
| 10   | 40  | 68  | 124  | 152  |

**Complex Font (Font 8)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 9   | 13  | 21   | 25   |
| 2    | 9   | 14  | 23   | 27   |
| 3    | 11  | 16  | 26   | 31   |
| 4    | 14  | 21  | 35   | 42   |
| 5    | 18  | 28  | 46   | 55   |
| 6    | 23  | 35  | 58   | 69   |
| 7    | 28  | 42  | 70   | 84   |
| 8    | 35  | 52  | 87   | 104  |
| 9    | 42  | 63  | 105  | 126  |
| 10   | 56  | 84  | 140  | 168  |

**European Font (Font 9)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 8   | 15  | 33   | 39   |
| 2    | 8   | 16  | 36   | 42   |
| 3    | 10  | 19  | 41   | 48   |
| 4    | 13  | 25  | 55   | 65   |
| 5    | 16  | 33  | 73   | 86   |
| 6    | 21  | 41  | 91   | 107  |
| 7    | 26  | 50  | 110  | 130  |
| 8    | 32  | 62  | 137  | 162  |
| 9    | 39  | 75  | 165  | 195  |
| 10   | 52  | 100 | 220  | 260  |

**Bold Font (Font 10)**

| Size | Top | Bow | Base | Drop |
| ---- | --- | --- | ---- | ---- |
| 1    | 12  | 18  | 36   | 40   |
| 2    | 14  | 20  | 40   | 44   |
| 3    | 15  | 23  | 45   | 50   |
| 4    | 20  | 30  | 60   | 67   |
| 5    | 27  | 40  | 80   | 89   |
| 6    | 34  | 50  | 100  | 111  |
| 7    | 40  | 60  | 120  | 134  |
| 8    | 50  | 75  | 150  | 167  |
| 9    | 60  | 90  | 180  | 201  |
| 10   | 80  | 120 | 240  | 268  |

NOTE: The above metric tables are based on 640x350 resolutions. For information on font scaling at other resolutions for the "system fonts" defined via the [RIP_FONT_STYLE](3.0-text-output-and-fonts.md#rip_font_style) command, see the preceding section for the RIP*FONT_STYLE command. This section defines the magnification factors for each font and how they relate to other resolutions. *(v2.A3)\_

### Chisel Effect Insets

The Chisel effect draws a dropshadowed line around the inside of the button. How far from the borders of the button are determined by this table:

| Height of Button | X inset | Y inset |
| ---------------- | ------- | ------- |
| 0 - 11           | 1       | 1       |
| 12 - 24          | 3       | 2       |
| 25 - 39          | 4       | 3       |
| 40 - 74          | 6       | 5       |
| 75 - 149         | 7       | 5       |
| 150 - 199        | 8       | 6       |
| 200 - 249        | 10      | 7       |
| 250 - 299        | 11      | 8       |
| 300 -            | 13      | 9       |

```text
[BEGIN REWORD]

  <<< Think about resolution independence of chisel indent. >>>
  <<< Talk about bevel sizes too, along with recesses.      >>>

[END REWORD]
```

> **Editor's note:** the `[BEGIN REWORD]` block is a verbatim artifact of the unfinished ALPHA 4 draft, preserved as published; no later edition resolved it. _Evidence: 2.00a4._

### Flags Field 2

This table describes the possible flag settings for the `<flags2>` parameter:

| Val | Description of Flags Field #2 | Icon | Clip | Plain | Mouse | No-Mouse |
| --- | --- | --- | --- | --- | --- | --- |
| 1 | Button is in a check box group | Y | Y | Y | Y | N |
| 2 | Highlight hotkey character | Y | Y | Y | Y | N |
| 4 | Explode (zoom out when clicked) | Y | Y | Y | Y | N |
| 8 | Left Justify Label (top/ctr/btm) | Y | Y | Y | Y | Y |
| 16 | Right Justify Label (top/ctr/btm) | Y | Y | Y | Y | Y |
| 32 | Don't fill-in button interior _(v2.A0)_ | N | N | Y | Y | Y |
| 64 | Fill-in interior in fill pattern _(v2.A0)_ | N | N | Y | Y | Y |

> **Editor's note - the shipping engines' extra flag (`<flags2>` bit 128):** the ALPHA 4 table above is the last _published_ word on `<flags2>`, but the shipping engines moved past it: RIPterm 2.20.01 (November 28, 1995) added an **icon-transparency** flag as `<flags2>` bit 128, absent from the ALPHA 4 table, and the 3.0 engine inherits that product lineage (see the [revision history](1.0-introduction.md#revision-history)). No argument-level documentation of the flag has been recovered - presumably it renders an icon button's face with one color transparent, analogous to [RIP_LOAD_BITMAP](4.0-icons-and-bitmaps.md#rip_load_bitmap) flag 8 _(hypothesis on the semantics)_. _Evidence: product changelog record (revision history); not in 2.00a4._

Following is a more complete description of the flags described in the `<flags2>` parameter: _(v1.54)_

**BUTTON IS IN A CHECK BOX GROUP (flag 1)** - When this flag is selected, then the button `<group_no>` is considered a Check-box group. When in this mode, the Radio Group flag is not accessible - A Button Group can be a Radio Button, a Check-box button or neither, but not more than one at the same time. A Check-box button group is a group of buttons where each button in the group can be either ON or OFF in any combination. In this way, more than one button in the group can be clicked at the same time. See [5.2 Templates & Conditionals](5.2-templates-and-conditionals.md) for a complete discussion of how the Host Commands are processed for Check-Box buttons. If a check-box button is drawn as "pre-selected", then the Host Command is processed immediately upon inital drawing of the button (when it is received). _(v1.54)_

**HIGHLIGHT HOTKEY CHARACTER (flag 2)** - When this flag is active, then the first occurence of the hotkey character in the label will be hilighted using the `<uline_col>` color. This gives the user a visual impression of what keystroke they need to type in order to activate the button without the mouse. _(v1.54)_

**EXPLODE (ZOOM OUT WHEN CLICKED) (flag 4)** - This optional flag is designed to "zoom out" from the button when the user clicks on it. What is generally done is a dotted rectangle is drawn initially around the button and it is repeatedly redrawn over itself in XOR mode, constantly getting larger and larger until it hits the full size of the screen. This gives the visual impression that the button is zooming out to another screen. Each time another frame of the zooming rectangle is drawn, the previous rectangle on the inside of the new one is erased by XOR drawing the same rectangle over itself again. This option does not need to be supported in order to be considered a RIPscrip terminal, although it would be nice. In other words, this is not a "make or break" feature. _(v1.54)_

**LEFT JUSTIFY LABEL (TOP/CTR/BTM) (flag 8)** - If this option is enabled, then any TOP, CENTER or BOTTOM label orientations will be left justified to the left edge of the button. The exact indentation of the label from the interior of the button's base image depends on whether the chisel effect is active. If chisel is OFF, then the indentation is 10 pixel. If chisel is ON, then the indentation is 20 pixels. This option can be combined with the Adjust Vertical Centering flag only if the label orientation is CENTER. _(v1.54)_

**RIGHT JUSTIFY LABEL (TOP/CTR/BTM) (flag 16)** - If this option is enabled, then any TOP, CENTER or BOTTOM label orientations will be right justified to the right edge of the button. The exact indentation of the label from the interior of the button's base image depends on whether the chisel effect is active. If chisel is OFF, then the indentation is 10 pixel. If chisel is ON, then the indentation is 20 pixels. This option can be combined with the Adjust Vertical Centering flag only if the label orientation is CENTER. _(v1.54)_

**DON'T FILL-IN BUTTON INTERIOR** - If this option is enabled and the button is a Plain Button, then the interior of the Button will not be filled in with the surface color. By default, any plain button will have its interior filled in with the surface color. Use this option if you don't want the button face to be drawn. _(v2.A0)_

**FILL-IN INTERIOR IN FILL PATTERN** - If this option is enabled in conjunction with a plain button, then the interior of the button that would normally be filled in with the surface color will instead, use the current Fill Color and Fill Pattern to fill in the interior. This allows for patterned button faces. _(v2.A0)_

## RIP_BUTTON

_Define a Mouse Button_

|               |                                                       |
| ------------- | ----------------------------------------------------- |
| **Level**     | 1                                                     |
| **Command**   | `U`                                                   |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY hotkey:2 flags:1 res:1 text` |

**Format:** `!|1U <x0> <y0> <x1> <y1> <hotkey> <flags> <res> <text>` **Example:** `!|1U2E5O747G2000<>Hotkeys<>`

**Attributes used:** Font Style, Viewport, Port (only for "non-mouse" type buttons), Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/4.3-buttons.md#rip_button)) · HLP (`RIP_Button`; limits label ≤255, hotkey ≤255) · corpus (75 uses in 17 files) · SyncTERM (ripper.c:16764)

This command physically creates a new Button using a previously defined [RIP_BUTTON_STYLE](#rip_button_style) in the current button style. You may have at most 128 different Mouse Buttons (you may have any number of non-Mouse Buttons). The `<slot>` parameter determines which button style slot is used to determine how this button appears. _(v2.A1)_ The ALPHA 4 draft removed the explicit `<slot>` parameters in favor of the current-style model. _(v2.A4)_

The `<x0>` and `<y0>` parameters for this command designate the upper-left corner of the Button. This (X,Y) location may not be the actual "absolute" corner position of the Button, as it may be adjusted via the Special Effects functions that are part of the RIP_BUTTON_STYLE command (see above).

The `<x1>` and `<y1>` parameters are only used for Plain Buttons when you have not specified a specific Height and Width in the RIP_BUTTON_STYLE command. These parameters are used in Dynamically Sized Buttons. If the Height and Width in the RIP_BUTTON_STYLE are non-zero, then these two parameters are set to zero.

The (x0,y0) and (x1,y1) parameters will be modified by the following values for the different special effects:

| Effect Type | X0 Modifier | Y0 Modifier | X1 Modifier | Y1 Modifier |
| ----------- | ----------- | ----------- | ----------- | ----------- |
| Bevel       | -bevel size | -bevel size | +bevel size | +bevel size |
| Recess      | -2          | -2          | +2          | +2          |
| Sunken      | 0           | 0           | 0           | 0           |
| Chisel      | 0           | 0           | 0           | 0           |

```text
[BEGIN REWORD]

  <<< Discuss resolution independence & scaling of the above >>>

[END REWORD]
```

> **Editor's note:** the `[BEGIN REWORD]` block is a verbatim artifact of the unfinished ALPHA 4 draft, preserved as published. _Evidence: 2.00a4._

The `<hotkey>` parameter is only used with Mouse Buttons. It is the ASCII code for the keystroke that will activate this Button. It is represented as a two-digit MegaNum. If this character exists in the text label, and the Underline flag or hilight hotkey flag is enabled in the RIP*BUTTON_STYLE, then the character will be underlined in the label. Control codes are allowable, and a value of 255 (decimal) corresponds to "any" key. *(v1.54)\_

The `<flags>` parameter provides several different functions for each button. The possible "combinatorial" flags for this parameter are listed in the following table. Note that these values may be combined together (by adding their values) to arrive at the final flag parameter's value.

| Value | Description                                   |
| ----- | --------------------------------------------- |
| 1     | Draw button as already selected               |
| 2     | Button is "default" when \<ENTER\> is pressed |

Using a flag of 1 means that the Button is already "selected". By selected, we mean that it is already clicked and should be initially drawn as clicked. This is typically used for Radio Buttons and/or Check Boxes. This only affects the image. The Host Command WILL NOT be automatically sent to the host when a selected Button is drawn. If this parameter is set to 0, then the Button will be drawn in normal, unselected mode.

The `<text>` parameter for this command is somewhat different than those found in previously described RIPscrip commands. All other RIPscrip commands only have one text parameter. This command requires anywhere from 0-3 text parameters. The way RIPscrip accomplishes this is by separating each block in the `<text>` parameter with the delimiter `<>`. This text parameter delimiter is not needed before the first text block, but is necessary between the 1st and 2nd blocks, and the 2nd and 3rd blocks. Here is an example of a typical text parameter for this command:

```text
ICONFILE.BMP<>TEXT LABEL<>HOST COMMAND
```

The actual syntax of this text parameter is as follows:

```text
[icon-file][[<>text-label][<>host-command]]
```

The block described as ICONFILE.BMP is actually the Icon Filename that will be used for the Button if it is an Icon Button. If it is not an Icon Button, then this block will read `<>` all by itself (a "null" block). _(v2.A1)_

Note that we actually specified a file extension of ".BMP" for our icon filename. You shouldn't explicitly specify a filename extension like this if it is the default extension of the filename. The reason for this is that some platforms don't use file extensions and their use is not really appropriate. When in doubt, don't specify a file extension. _(v2.A1)_

The .BMP file extension does not need to be included as part of the filename. If omitted, it will automatically be appended to the filename. If an extension is provided, it will be used verbatim. _(v2.A1)_

The "TEXT LABEL" block is actually the text that will be used to descriptively label the Button. You may also specify a "null" block for no label (i.e., `<>`).

The final block of the `<text>` parameter is the Host Command. This block contains any text that should be sent to the Host after this Button is clicked. This may contain any Control Characters, Pick-List definitions, Text Variables or Template Definitions. This block might be "segmented" into multiple Host Command segments. See [5.0 Host Commands](5.0-host-commands.md) for additional information on these Host Command features.

When this command is stored in-memory, it is converted to global screen coordinates (for internal storage only). This makes it so that if you have mouse button regions defined in multiple different viewports, that each field will be properly inverted at the right location regardless of the currently defined viewport. _(v1.54)_

NOTE: All Mouse Fields are scanned in "last in, first out" order. This means that the last-most received Mouse Button will be the first one scanned for a mouse click. _(v1.54)_

Not all of the blocks in the `<text>` parameter need to be specified. Here are examples of the valid combinations of text blocks:

| Parameter Example       | Description of the Text Parameter           |
| ----------------------- | ------------------------------------------- |
| `icon<>label<>host_cmd` | Specify all three blocks                    |
| `<>label<>host_cmd`     | 2 blocks specified; no icon                 |
| `icon<>label<>`         | 2 blocks specified; no host command         |
| `icon<>label`           | 2 blocks specified; no host command         |
| `<><>host_cmd`          | 1 block specified; no icon or label         |
| `<>label<>`             | 1 block specified; no icon or host command  |
| `<>label`               | 1 block specified; no icon or host command  |
| `icon<><>`              | 1 block specified; no label or host command |
| `icon<>`                | 1 block specified; no label or host command |
| `icon`                  | 1 block specified; no label or host command |
| `<><><>`                | A blank text parameter; all blocks omitted  |
| `<><>`                  | A blank text parameter; all blocks omitted  |
| `<>`                    | A blank text parameter; all blocks omitted  |

Under RIPscrip 1.54 and earlier versions, button icon filenames ended with .ICN for normal icons, and .HIC for "Hot IcoN". Under 2.0 and later, these file extensions are different. For normal button icons, the extension .BMP is used for a standard bitmap, and .BMH is used for a "hot bitmap". _(v2.A3)_

When a button is displayed that uses an icon/bitmap, special care must be taken when dealing with hot bitmaps. If the flag is present in the button style indicating to use hot icons, then when the button is displayed as selected then the hot bitmap (.BMH) file's image is used to display the button. If that file doesn't exist, then the normal bitmap button is displayed in an inverted state. If neither of these files are present, then the RIP*BUTTON command is ignored. *(v2.A3)\_

If the host command string of the button cannot be parsed properly, then the button is completely ignored. _(v2.A3)_

NOTE: The `<res>` parameter is reserved for future use by TeleGrafix Communications, Inc.. It should be set to 0 for compatibility with future releases.

### The shipped 3.x button aesthetic

The 3.x corpus shows how TeleGrafix itself built buttons: rather than 1.54-style chiseled plain buttons, scenes stamp **bitmap skins** with [RIP_LOAD_BITMAP](4.0-icons-and-bitmaps.md#rip_load_bitmap) (TELBUT.BMP, RADIONEW.BMP, CHECKBOX.BMP) and lay `1U` buttons or [`1M` mouse fields](4.2-mouse-fields-and-pointer.md#rip_mouse) over them; the corresponding `.BMH` files on disk are the pre-rendered **highlight-state** variants automatically shown while a hot-icon button is depressed (they are never named in any script - pairing is by filename convention; see [6.1](6.1-content-file-roles.md#bmh---button-highlight-variants)). `1B` + `1U` with empty `<><>` blocks also serve as pure chisel-frame decorations. The example above is a plain radio-group demo button whose host command is empty - its behavior comes from the button-style flags. _Evidence: corpus (ICONS/\*.BMH pairs; BUTTONS.RIP, TELDEMOS.MNU)._

## RIP_SWITCH_BUTTON_STYLE

_Switches to a new button style_

_Added in RIPscrip v2.A4._

|               |                |
| ------------- | -------------- |
| **Level**     | 2              |
| **Command**   | `B`            |
| **Arguments** | `bstyle_num:2` |

**Format:** `!|2B <bstyle_num>` **Example:** `!|2B04`

**Attributes used:** Base Math (current setting) **Evidence:** 2.00a4 ([2.0 entry](../../2.0/ripscrip/4.3-buttons.md#rip_switch_button_style)) · HLP (`RIP_SwitchButtonStyle`; button-style slots 0-35, `$SBS$`/`$RBS$` backup variables) - not observed in the RIPtel demo corpus, not in SyncTERM

This command physically switches the currently active button style. Any subsequent button operations will use this new button style.

You are allowed up to 36 separate button styles to switch between. Possible button style slot numbers are from 0-35 (0-Z).

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a proper [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is executed, then all unprotected button style slots are reset to the default button style. Also, the current button style is reset to button style number 0.

The demos simply re-send [RIP_BUTTON_STYLE](#rip_button_style) before each button group instead of switching slots. _Evidence: corpus (absence)._

---

[◀ Prev: 4.2 Mouse Fields & Pointer](4.2-mouse-fields-and-pointer.md) · [Contents](README.md) · [Next: 4.4 Tone & Sound Generation ▶](4.4-tone-and-sound-generation.md)
